--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
+    "react-scroll-up-button": "^1.6.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
